# fake_data_generator

./: README.md  fake_data_generator_script.py  pyproject.toml  requirements.txt  Описание файлов библиотеки.md
demo/: general_demo.py
demo/csv_demo/: demo1.py  demo2.py  demo3.py  demo4.py
demo/csv_demo/bookings/: aircrafts_data.csv  airports_data.csv  test.csv
demo/csv_demo/fake_bookings/: demo1_fake_flights.csv  demo2_fake_aircrafts_data.csv  demo3_fake_airports_data.csv  demo4_fake_flights.csv
demo/table_in_db_demo/clickhouse/: demo1.py  demo2.py  demo3.py  demo6.py
demo/table_in_db_demo/postgresql/: demo1.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  demo7.py  demo8.py  demo9.py
demo/xml_demo/: demo1.py  demo2.py  demo3.py
demo/xml_demo/demo2/: demo2.xml
demo/xml_demo/demo3/: demo3_1.xml  demo3_2.xml  demo3_3.xml  demo3_4.xml
demo/xml_demo/output_demo1/: 125360.xml  305870753.xml  55661.xml  87016.xml  98146.xml
demo/xml_demo/output_demo2/: demo2.xml
fake_data_generator/: __init__.py
fake_data_generator/columns_generator/: __init__.py  column.py  column_info.py  database_name.py  fake_data.py  generators.py  get_columns_info_with_set_generators.py  get_fake_data_for_columns.py  get_fake_data_for_insertion.py  get_fake_date_for_columns.py  get_fake_date_for_columns_inf_gen.py  get_generator_for_columns.py  get_info_for_columns.py  get_rich_column_info.py  helper_functions.py  info_for_columns.py  rich_info.py
fake_data_generator/dependency_resolver/: __init__.py  dependencies_graph.py  entity.py
fake_data_generator/sources_formats/: __init__.py  csv.py  generate_fake_table.py  generate_table_from_profile.py  generate_table_profile.py  helper_functions.py  table_in_db.py  table_in_hive_and_impala.py  xml.py
tests/: __init__.py  sqlalchemy_test.py  test_get_common_regex.py
(+9 files in other folders)
