[tool.poetry]
name = "fake_data_generator"
packages = [
  { include = "fake_data_generator" },
]
version = "1.0.2"
description = ""
authors = ["Alexander Maksimovich <cahr2001@mail.ru>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "1.5.3"
numpy = ">1.24.3"
scipy = ">1.10.1"
rstr = ">3.2.1"
loguru = ">0.7.0"
pyspark = ">3"
sqlalchemy = ">2.0.19"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
faker = "^18.10.1"
psycopg2 = "^2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
