[tool.poetry]
name = "fake_table_data_generator"
packages = [
  { include = "fake_data_generator" },
]
version = "1.0.6"
description = ""
authors = ["Alexander Maksimovich <cahr2001@mail.ru>"]

[tool.poetry.dependencies]
python = ">3"
pandas = "1.3.5"
numpy = "1.21.6"
scipy = "1.7.3"
rstr = "3.2.1"
loguru = "0.7.0"
pyspark = "^3"
sqlalchemy = "^2.0.19"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
